[package]
name = "pngme"
author = "Ana Margarida Silva <ams-amargarida@hotmail.com>"
about = "Hides secret messages in a PNG"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
crc = "3.0"
